--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper{
+    overflow-x: hidden;
+    overflow-y: auto; 
+    background-color:rgb(237, 228, 228);   
 }
+
+.wrapper h1{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.wrapper p{
+    text-align: center;
+    margin-top: 7px;
+    font-weight: bold;
+}
+
+.wrapper .main{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.wrapper .form-container{
+    width: 500px;
+    height:fit-content;
+    background-color: #e4e4e4;
+    margin: 20px auto;
+    padding: 20px;   
+}
+
+.wrapper .form-container .btn{
+    width: 100%;   
+}
+
+.wrapper .view-container{
+    width: 600px;    
+    background-color: #e4e4e4;
+    margin: 20px auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.delete-btn{
+    color: red;
+    cursor: pointer;
+}
+
+tbody{
+    margin-top: 20px;
+}
+.btn-success{
+margin: 10px;
+}
+
+.input-values{
+display: flex;
+flex-direction: column;
+height: 120px;
+width:200px;
+
+}
+.input-image{
+    height: 120px;
+    width: 120px; 
+}
+#img{
+    height: 120px;
+    width: 120px;
+    border-radius: 10px;
+    
+}
+.details{
+ border-top: 2px solid black;
+ border-bottom: 2px solid black;
+ border-radius: 10px;
+   display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 5px;
+   }
+   .skills{
+    display: inline;
+    text-align: left;
+   }
+   .w{
+    
+    color: blue;
+   }
+   .n{
+   
+    font-weight: 600;
+   }
+
+@media screen and (max-width: 1367px) {
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    .main{
+      display: flex;
+      flex-direction: column;
+    }
+    .wrapper .form-container{
+        width: 300px;
+         
+    }
+    #img{
+        height: 100px;
+        width: 100px;
+        border-radius: 10px;
+    }
+    .input-values{
+        width:300px;
+    }
+    .details{
+        display: flex;
+        justify-content:flex-start;
+        width: fit-content;
+    }
+     .btn-danger{
+        width: 200px;
+        text-align: center;
+        position: relative;
+        left:0px;
+     }
+     .view-container{
+        display: flex;
+        align-items: center;
+     }
+  }
